better text contrast, fix hover color for links

--- a/_sass/_main.scss
+++ b/_sass/_main.scss
@@ -12,7 +12,7 @@ body {
     text-rendering: optimizeLegibility;
 	line-height:1.5;
 	font-size: 1rem;
-	color: gray;
+	color: oldlace;
 	background-color: black;
 }
 
@@ -24,6 +24,11 @@ a {
     color: red;
     text-decoration-skip-ink: auto;
     text-decoration: underline;
+}
+
+a:hover {
+    color: gray;
+    text-decoration-skip-ink: auto;
 }
 
 pre {
